# ERay

./: CMakeLists.txt  CMakePresets.json  README.md
include/: HelloTriangleApplication.h  Ray.h  RayUtils.h  Test.h  TestMe.h  VulkanApp.h
shaders/: shader.vert
shaders/compiled_shaders/: shader.vert.spv
src/: HelloTriangleApplication.cpp  Ray.cpp  RayUtils.cpp  Test.cpp  TestMe.cpp  VulkanApp.cpp  main.cpp
